node-exporter.yml
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    prometheus.io/scrape: 'true'
#  labels:
#    app: node-exporter
#    name: node-exporter
#  name: node-exporter
#spec:
#  clusterIP: None
#  ports:
#  - name: scrape
#    port: 9100
#    protocol: TCP
#  selector:
#    app: node-exporter
#  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: node-exporter
spec:
  template:
    metadata:
      labels:
        app: node-exporter
      name: node-exporter
    spec:
      nodeSelector: {}
      containers:
      - image: prom/node-exporter
        name: node-exporter
        # This name is required
        args:
        - -collector.procfs
        - /host/proc
        - -collector.sysfs
        - /host/proc
        - -collector.filesystem.ignored-mount-points
        - "^/(sys|proc|dev|host|etc)($|/)"
        volumeMounts:
          - name: host-proc
            mountPath: /host/proc
            readOnly: true
          - name: host-sys
            mountPath: /host/sys
            readOnly: true
          - name: host-root
            mountPath: /rootfs
            readOnly: true
        ports:
        - containerPort: 9100
#          hostPort: 9100
          name: scrape
      hostNetwork: true
#      hostPID: true
      volumes:
        - name: host-proc
          hostPath:
            path: /proc
        - name: host-sys
          hostPath:
            path: /sys
        - name: host-root
          hostPath:
            path: /
