prometheus-kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus-service
  annotations:
    prometheus.io/scrape: "true"
spec:
  #type: NodePort
  type: LoadBalancer
  ports:
  - name: prometheus
    port: 9090
    protocol: TCP
    #nodePort: 30090
    targetPort: 9090
  selector:
    app: prometheus
    deployment: prometheus-deployment
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      deployment: prometheus-deployment
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus
        deployment: prometheus-deployment
    spec:
      containers:
      - image: prom/prometheus:v1.0.1
        name: prometheus-image
        args:
          - -config.file=/etc/prometheus/prometheus.yml
          - -storage.local.path=/prometheus
          - -web.console.libraries=/etc/prometheus/console_libraries
          - -web.console.templates=/etc/prometheus/consoles
          - -storage.local.retention=1h0m0s
        ports:
        - name: http
          containerPort: 9090
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-volume-config
        - mountPath: /prometheus
          name: prometheus-volume-empty
        livenessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 1
        readinessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 1
      volumes:
      - name: prometheus-volume-config
        configMap:
          name: prometheus-configmap
      - emptyDir: {}
        name: prometheus-volume-empty
