prometheus-openshift.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: prometheus
  name: prometheus-route
spec:
  host: prometheus.paas.osp.consol.de
  port:
    targetPort: 9090-tcp
  to:
    kind: Service
    name: prometheus-service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus-service
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: LoadBalancer
  ports:
  - name: 9090-tcp
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
    deploymentconfig: prometheus-dc
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: prometheus
  name: prometheus-dc
spec:
  replicas: 1
  selector:
    app: prometheus
    deploymentconfig: prometheus-dc
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: prometheus
        deploymentconfig: prometheus-dc
    spec:
      containers:
      - image: prom/prometheus:v1.0.1
        name: prometheus-image
        args:
          - -config.file=/etc/prometheus/prometheus.yml
          - -storage.local.path=/prometheus
          - -web.console.libraries=/etc/prometheus/console_libraries
          - -web.console.templates=/etc/prometheus/consoles
          - -storage.local.retention=1h0m0s
          - -storage.local.memory-chunks=500000
        ports:
        - name: http
          containerPort: 9090
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-volume-config
        - mountPath: /prometheus
          name: prometheus-volume-empty
        livenessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 1
        readinessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 1
      volumes:
      - name: prometheus-volume-config
        configMap:
          name: prometheus-configmap
      - emptyDir: {}
        name: prometheus-volume-empty
